[package]
name = "bar_daemon"
version = "0.6.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
futures-util = "0.3.31"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
itertools = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.142"
futures = "0.3.31"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json", "time", "local-time"] }
time = { version = "0.3.47", features = ["macros"] }
bar_daemon_derive = { path = "../bar_daemon_derive"}
